# OORAGAN

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/_static/: ooragan.css
docs/_templates/autosummary/: class.rst
ooragan/: __init__.py  analysis.py  dataset.py  graphing.py  ppms_analysis.py  pppms_analysis.py  resonator_fitter.py  util.py
resonatoranalysis/: __init__.py  analysis.py  dataset.py  file_handler.py  grapher.py  graphing.py  resonator_attribution.py  resonator_fitter.py  util.py
src/ooragan/: __init__.py  file_loading.py  fitting.py  graphing.py  parameters.py  plotting.py  ppms_analysis.py  typing.py  util.py
src/ooragan/old/: __init__.py  dataset.py  graphing.py  resonator_fitter.py
unit_testing/: analysis_test.py  util_test.py
unit_testing/Test sets/: 2023-08-29 22-14-04 VNA Power.hdf5  2023-08-31 01-48-44 VNA Power.hdf5  2023-11-05 03-04-30 VNA Power.hdf5  2024-02-26 19-58-19 VNA Power.hdf5  S21_lauA__4_598GHz_-40dBm.txt  lauB_ligne1_5_16_-80dBm.csv  lauB_ligne1_basP_5_16_20230207-015059.txt  lauB_ligne1_basP_5_16_20230207-015059_name_not_found_readval_4.txt
unit_testing/Test sets/20230329/: 5_546G_-70dBfrigo_15mK.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_0.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_1.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_2.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_3.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_4.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_5.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_6.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_7.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_8.txt  5_546G_-70dBfrigo_15mK_name_not_found_readval_9.txt
unit_testing/Test sets/20230330/: lau_B_4_79312G_-70dBfrigo_20mK.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_0.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_1.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_2.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_3.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_4.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_5.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_6.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_7.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_8.txt  lau_B_4_79312G_-70dBfrigo_20mK_name_not_found_readval_9.txt
unit_testing/Test sets/20230331/: lau_A_5_546G_-70dBfrigo_-30dBvna_14mK.txt  (+7 more)
(+151 files in other folders)
