[project]
name = "ooragan"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "easygui>=0.98.3",
    "graphinglib",
    "h5py>=3.13.0",
    "loess>=2.1.2",
    "resonator",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
graphinglib = { git = "http://github.com/graphinglib/graphinglib.git" }
resonator = { git = "https://github.com/danielflanigan/resonator.git" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-favicon>=1.0.1",
]
